// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTextHeadlineSkeletonBaseJssStyle() should return correct jssStyle for elementHeight: 32 1`] = `
Object {
  "&::after": Object {
    "animation": "opacity var(--p-override-skeleton-animation-duration, 1.5s) ease-in-out infinite",
    "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 28px, transparent 28px, transparent 32px)",
    "content": "\\"\\"",
    "height": "100%",
    "left": "0",
    "position": "absolute",
    "top": "0",
    "visibility": "visible",
    "width": "100%",
  },
  "color": "transparent",
  "display": "block",
  "height": "2rem",
  "position": "relative",
}
`;

exports[`getTextHeadlineSkeletonBaseJssStyle() should return correct jssStyle for elementHeight: 36 1`] = `
Object {
  "&::after": Object {
    "animation": "opacity var(--p-override-skeleton-animation-duration, 1.5s) ease-in-out infinite",
    "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 32px, transparent 32px, transparent 36px)",
    "content": "\\"\\"",
    "height": "100%",
    "left": "0",
    "position": "absolute",
    "top": "0",
    "visibility": "visible",
    "width": "100%",
  },
  "color": "transparent",
  "display": "block",
  "height": "2.25rem",
  "position": "relative",
}
`;

exports[`getTextHeadlineSkeletonSubJssStyle() should return correct jssStyle for elementHeight: 32 1`] = `
Object {
  "&::after": Object {
    "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 28px, transparent 28px, transparent 32px)",
  },
  "height": "2rem",
}
`;

exports[`getTextHeadlineSkeletonSubJssStyle() should return correct jssStyle for elementHeight: 36 1`] = `
Object {
  "&::after": Object {
    "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 32px, transparent 32px, transparent 36px)",
  },
  "height": "2.25rem",
}
`;

exports[`getTextSkeletonStyles() should return correct css 1`] = `
Object {
  "@global": Object {
    "p-text, p-text-list-item": Object {
      "&:not(.hydrated)": Object {
        "&::after": Object {
          "animation": "opacity var(--p-override-skeleton-animation-duration, 1.5s) ease-in-out infinite",
          "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 20px, transparent 20px, transparent 24px)",
          "color": "#626669",
          "content": "\\"\\"",
          "height": "100%",
          "left": "0",
          "position": "absolute",
          "top": "0",
          "visibility": "visible",
          "width": "100%",
        },
        "&[size=large], &.pds-skeleton--size-large": Object {
          "&::after": Object {
            "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 44px, transparent 44px, transparent 48px)",
          },
          "height": "3rem",
        },
        "&[size=medium], &.pds-skeleton--size-medium": Object {
          "&::after": Object {
            "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 32px, transparent 32px, transparent 36px)",
          },
          "height": "2.25rem",
        },
        "&[size=x-large], &.pds-skeleton--size-x-large": Object {
          "&::after": Object {
            "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 60px, transparent 60px, transparent 64px)",
          },
          "height": "4rem",
        },
        "&[size=x-small], &.pds-skeleton--size-x-small": Object {
          "&::after": Object {
            "background": "linear-gradient(transparent, transparent 4px, currentColor 4px, currentColor 16px, transparent 16px, transparent 20px)",
          },
          "height": "1.25rem",
        },
        "&[theme=dark], &.pds-skeleton--theme-dark": Object {
          "&::after": Object {
            "color": "#b0b1b2",
          },
        },
        "color": "transparent",
        "display": "block",
        "height": "1.5rem",
        "position": "relative",
      },
    },
  },
}
`;
